--- a/page2.html
+++ b/page2.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
     <link rel="icon" type ="image/x-icon" href="media/favicon.ico">
   </head>
-  <body class="bodybackground">
+  <body id="bodybackground">
     <header>
       <nav id="main-navbar">
         <div id="navbar-container">
@@ -29,6 +29,10 @@
       </div>
     </div>
   </body>
-
-
+  <footer id="footerstyle">
+    <div class= "box" id ="one">one -footer parent</div>
+    <div class = "box"id ="two">two -footer parent</div>
+  </footer>
+  <div class= "box" id ="three">three</div>
+  <div class = "box" id ="four">four</div>
 </html>  
